--- a/top list project/templates/index.html
+++ b/top list project/templates/index.html
@@ -40,7 +40,7 @@
     	 <!-- Header below is on every page -->
     	 
     <header id="topofpage">
-        <h1>Top List</h1>
+        <h1>Vinyl Collection</h1>
         
         <nav id="navHead">
         <table class="TopToolbarContainer">
@@ -71,8 +71,8 @@
     		<nav id="navLeftToolbar">
     			
     	<a href="/collector"> <div class="leftToolbarButton" id="myVinylButton">
-    			 My 
-   			<br>Collections
+    			 My [list here]
+    		<br>Collection 
     	</div> </a>
     		
     		<br>
@@ -160,139 +160,14 @@
     	</div> 
     	
     	<!-- Everything above this is the LEFT TOOLBAR CONTAINER FOR EVERY PAGE -->
-    	
-    	<div class="pullTab"> 
-    		<p class="showBar"> Show </p> 
-    		<p class="hideBar"> Hide </p> 
-    	</div>   
         
-        <table class="welcomeTable">
-        	<tbody>
-        		<tr>
-        			<td id="signInDropToggle">Sign In</td> <!--Jquery drop down -->
-        			<td id="spaceBetween"> - </td>
-        			<a href="/register"><td>Register</td></a>
-        		</tr>
-        		<tr>
-        			<td>
-        			<div class="signInForm">
-        				<form>
-        					Username: <input type="text" name="username"/>
-        					<br>
-        					<br>
-        					Password: <input type="password" name="password" />
-        					</form>
-        					<br>
-        					<button>Sign In</button>
-        			</div>
-        			</td>
-        		</tr>
-        	</tbody>
-        </table>
-        
-        <table class="topListsTable unFinished">
-        	<tbody>
-        		<th>Top Lists</th>
-        		<tr>
-        			<td>
-        				<ol>
-        					<li>Vinyl</li>
-        					<li>Cats</li>
-        					<li>Cars</li>
-        					<li>Comics</li>
-        					<li>Gagets</li>
-        					<li>Jewlery</li>
-        					<li>Food</li>
-        					<li>Cats</li>
-        					<li>Cats</li>
-        					<li>Cats</li>
-        					<li>Cats</li>
-        					<li>Cats</li>
-        					<li>Cats</li>
-        					<li>Cats</li>
-        					<li>Cats</li>    					
-        				</ol>
-        			</td>
-        		</tr>
-        	</tbody>
-        </table>
-        
-     
-        <table class="top5ListTable">
-        	<tbody>
-        		<th>Top 5 Lists</th>
-				<tr>
-					<td>
-					<div class="topBox">
-						<a href="/collector/vinyl/"><img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRHdw9Yy9fdH7Wz_RHaKz1-8cB5PueySk_cPKsrPBT1Kvfr2tdX" /></a>
-						<h6>Vinyl Records Top List</h6>
-					</div>
-					</td>
-				</tr>
-				<tr>
-					<td>
-					<div class="topBox">
-						<a href="/collector/vinyl/"><img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRHdw9Yy9fdH7Wz_RHaKz1-8cB5PueySk_cPKsrPBT1Kvfr2tdX" /></a>
-						<h6>Cats Top List</h6>
-					</div>
-					</td>
-				</tr>
-				<tr>
-					<td>
-					<div class="topBox">
-						<a href="/collector/vinyl/"><img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRHdw9Yy9fdH7Wz_RHaKz1-8cB5PueySk_cPKsrPBT1Kvfr2tdX" /></a>
-						<h6>Gameboy Top List</h6>
-					</div>
-					</td>
-				</tr>
-				<tr>
-					<td>
-					<div class="topBox">
-						<a href="/collector/vinyl/"><img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRHdw9Yy9fdH7Wz_RHaKz1-8cB5PueySk_cPKsrPBT1Kvfr2tdX" /></a>
-						<h6>Epic Lewtz Records Top List</h6>
-					</div>
-					</td>
-				</tr>
-				<tr>
-					<td>
-					<div class="topBox">
-						<a href="/collector/vinyl/"><img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRHdw9Yy9fdH7Wz_RHaKz1-8cB5PueySk_cPKsrPBT1Kvfr2tdX" /></a>
-						<h6>Guitars Records Top List</h6>
-					</div>
-					</td>
-				</tr>
-        	</tbody>
-        </table> 
+        <!-- Below is the unique main body -->
         
         
-        <table class="newsTable">
-        	<tbody>
-        		<th>Top List News</th>       	
-        		<tr>
-        			<td>
-        			<div class="newsArticle">
-        				<h2>OMG OMG OMG THIS HAPPEND</h2>
-        				<p>Ben Goldwasser and Andrew VanWyngarden formed the band while attending Wesleyan University during their freshman year "We weren't trying to start a band," remarked Goldwasser.
-        					 "We were just hanging out and showing each other music that we liked." They experimented with noise rock and electronica before settling on what Paco Alvarez of Spin calls 
-        					 "their current brand of shape-shifting psychedelic pop." They graduated in 2005 and toured extensively in support of the Time to Pretend EP, opening for indie pop band Of Montreal.       					 
-							The band first started with the name The Management, but since this name was already being used by another band, they later changed it to MGMT. This abbreviation stands for Management.</p>
-        			</div>
-        			</td>
-        		</tr>
-        		<tr>
-        			<td>
-        			<div class="newsArticle">
-        				<h2>OMG OMG OMG THIS ALSO HAPPEND SRSLY</h2>
-        				<p>Ben Goldwasser and Andrew VanWyngarden formed the band while attending Wesleyan University during their freshman year "We weren't trying to start a band," remarked Goldwasser.
-        					 "We were just hanging out and showing each other music that we liked." They experimented with noise rock and electronica before settling on what Paco Alvarez of Spin calls 
-        					 "their current brand of shape-shifting psychedelic pop." They graduated in 2005 and toured extensively in support of the Time to Pretend EP, opening for indie pop band Of Montreal.       					 
-							The band first started with the name The Management, but since this name was already being used by another band, they later changed it to MGMT. This abbreviation stands for Management.</p>
-        			</div>
-        			</td>
-        		</tr>
-        	</tbody>
-        </table> 
- 
+        <div id="spaceHolder"></div>
+        	
+         <!-- Above is the unique main body -->
+       
          <!-- Below is the footer in every page -->
     <footer>
     <nav id="navFoot">
@@ -312,7 +187,7 @@
         				<ul>
         					<td>
         						<a href="/collector/vinyl/"><li>Home</li></a>
-        						<a href="/collector/about"><li>About</li></a>
+        						<a href="/collector/about/"><li>About</li></a>
         						<a href="http://shop.bdsys.net/"><li>Store</li></a>
         						<a href="http://parked.bdsys.net/parked2/lolcat"><li>That</li></a>
         					</td>
