--- a/top list project/templates/collector-main.css
+++ b/top list project/templates/collector-main.css
@@ -59,10 +59,6 @@ a {
 	text-decoration:none;
 }
 
-.unFinished {
-	border: .2em solid black;
-}
-
 /*Above are custom global conditions */
 
 /* Below is the header in every page, this includes the top screen H1 and nav bar */
@@ -103,6 +99,57 @@ header > h1 {
 	color:#6666FF;
 	text-decoration:none;
 }
+
+
+/* Below is the welcome banner which may be used  */
+
+.welcomeBanner {
+	display:inline-block;
+	position:fixed;
+	border: .2em solid black;
+	background-color: white;
+	height: 16em;
+	width: 20em;
+	margin: 20% auto auto 11%;
+	border-radius: 5%;
+}
+
+.welcomeBanner p:last-of-type {
+	margin-bottom: 3%;
+}
+
+.welcomeBanner form {
+	width: 60%;
+	margin: auto auto auto 5%;
+	float:left;
+}
+
+#signIn {
+	height: 6em;
+	width: 6em;
+	border: .2em solid black;
+	border-radius:20%;
+	background-color: #838BB1;
+	margin: auto auto auto 65%;
+}
+
+#signIn h6 {
+	text-align:center;
+	font-family: cursive;
+	margin-top: 35%;
+}
+
+.exitX {
+	float:right;
+	height: 5%;
+	width: 5%;
+}
+
+.welcomeBanner button {
+	margin: auto auto 5% 27%;
+}
+
+/*above is the welcome banner which may be used */
 
 /* Above header is in every page  */
 
@@ -232,66 +279,11 @@ header > h1 {
 	padding: 7%;
 }
 
-/*
-#myDisplay ul li form h6 {
-	border: .2em solid black;
-	float:right;
-}
-*/
-
 #myDisplay ul li:hover {
 	background-color:#838BB1;
 }
 
-/* Above is the left toolbar container */
-
-/* Below hover banner and stuff of this page */
-
-.welcomeBanner {
-	display:inline-block;
-	position:fixed;
-	border: .2em solid black;
-	background-color: white;
-	height: 16em;
-	width: 20em;
-	margin: 20% auto auto 11%;
-	border-radius: 5%;
-}
-
-.welcomeBanner p:last-of-type {
-	margin-bottom: 3%;
-}
-
-.welcomeBanner form {
-	width: 60%;
-	margin: auto auto auto 5%;
-	float:left;
-}
-
-#signIn {
-	height: 6em;
-	width: 6em;
-	border: .2em solid black;
-	border-radius:20%;
-	background-color: #838BB1;
-	margin: auto auto auto 65%;
-}
-
-#signIn h6 {
-	text-align:center;
-	font-family: cursive;
-	margin-top: 35%;
-}
-
-.exitX {
-	float:right;
-	height: 5%;
-	width: 5%;
-}
-
-.welcomeBanner button {
-	margin: auto auto 5% 27%;
-}
+/*Below is the pull tab function to hide/show the left tool bar. This is in the main body of each page */
 
 .showBar, .hideBar {
 	font-family: "Bodoni MT", Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
@@ -319,124 +311,18 @@ header > h1 {
 	text-align: center;
 }
 
+/* Above is the pull tab function /*
+ 
+/* Below is the unique main body */
+ 
+ 
+ #spaceHolder {
+ 	height: 58em;
+ 	width: 58em;
+ }
+ 
 
-
-/* below is the main body of this page */
-
-.welcomeTable {
-	display:inline-block;
-	height: 20%;
-	width: 10%;
-	margin: 2% 10% auto auto;
-	float: right;
-	font-family: cursive;
-}
-
-#spaceBetween {
-	padding-left: .5em;
-	padding-right: .5em;
-}
-
-.signInForm {
-	height: auto;
-	width: 100%;
-	margin-top: 20%;
-}
-
-
-.topListsTable {
-	height: auto;
-	width: 15%;
-	margin: 20% auto auto auto;
-	float:right;
-	overflow:hidden;
-}
-
-.topListsTable th {
-	height: 2em;
-	width: 2em;
-	font-family:"Book Antiqua", Tahoma, serif;
-	border-bottom: .2em solid black;
-}
-
-.topListsTable li {
-	height: 1.2em;
-	width: 1.2em;
-	font-family:"Book Antiqua", Tahoma, serif;
-	margin-top: 1%;
-}
-
-.top5ListTable {
-	display:inline-block;
-	height: auto;
-	width: 20%;
-	margin: 3% auto auto 2%;
-	border: .2em solid black;
-	float: left;
-	font-family:"Agency FB";
-	overflow: hidden;
-}
-
-.topBox {
-	border-top: .2em solid black;
-	border-bottom: .2em solid black;
-}
-
-.topBox img {
-	height: 70%;
-	width: 40%;
-	padding: 1em;
-	border-right: .2em solid black;
-	margin: auto auto auto auto;
-	float: left;
-}
-
-.topBox h6 {
-	float: right;
-	margin: 10% 2% auto auto;
-	overflow:hidden;
-}
-
-.newsTable {
-	height: auto;
-	width: 20%;
-	border: .5em solid black;
-	margin: 2% auto auto auto;
-	font-family: cursive;
-	overflow: hidden;
-}
-
-.newsTable th {
-	border-bottom: .2em solid black;
-}
-
-.newsArticle {
-	height: 40%;
-	width: 80%;
-	margin: auto auto auto auto;
-	overflow: hidden;
-	padding-bottom: .5em;
-	border-bottom: .2em solid black;
-	text-align: center;
-}
-
-.newsArticle h2 {
-	margin-top: 5%;
-	border-bottom: .1em solid black;
-}
-
-.newsArticle p {
-	margin-top: 5%;
-	font-family:"Book Antiqua", Tahoma, serif;
-	font-size: 1em;
-}
-
-#huge {
-	height: 59em;
-	width: auto;
-}
-
-/* Above is the mian body */
+/* Above is the main body of this page */
 
 /* Below FOOTER is in every page | Above body is unique to this page */
 
