--- a/toplist/templates/artist-type/index-artist-type.html
+++ b/toplist/templates/artist-type/index-artist-type.html
@@ -2,42 +2,15 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-    	<link type"text/css" rel="stylesheet" href="splash-home.css"/>
+    	<link type="text/css" rel="stylesheet" href="artist-type.css"/>
     	<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script> <!-- Calls Jquery library from teh netz  You may want to host this server side after dev work:)--> 
     	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script> <!-- This too ^.^ -->
-    	<script type="text/javascript" src="splash-main.js"></script>
+    	<script type="text/javascript" src="artist-type.js"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Collector Net</title>
-        <meta http-equiv="REFRESH" content="3;url=/collector">
     </head>
       <!-- Everything below this in every site -->
-    <body>
-    	
-    	<!-- Below is a fixed welcome banner ONLY ON THIS PAGE -->
-    	
-    <!--	<div class="welcomeBanner">
-        	<img class="exitX" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFzLSTJ4t4PSRlYjKkGf_45ikmwEt1TaikQNWwH_DIncNlKziz-w" />
-        	<p> Welcome! </p>
-        	<br>
-        	<p>Looks like this is your first time visting.</p>
-        	<br>
-        	<a href="/collector" target="_blank"><button>Register an account</button></a>
-        	<br>
-        	<p> Click <a href="http://www.bdsys.net/" target="_blank">here</a>
-        	   for more information.</p>
-        	<br>
-        	
-        	<form>
-        		Username: <input type="text" name="username"/>
-        		<br>
-        		<br>
-        		Password: <input type="password" name="password" />
-        	</form>
-        	<div id="signIn">
-        		<h6>Sign In</h6>
-        	</div>
-        </div> -->
-    	
+    <body>   	
     	 <!-- Header below is on every page -->
     	 
     <header id="topofpage">
@@ -72,7 +45,7 @@
     		<nav id="navLeftToolbar">
     			
     	<a href="/collector"> <div class="leftToolbarButton" id="myVinylButton">
-    			 My 
+    			 My [list here]
     		<br>Collection 
     	</div> </a>
     		
@@ -129,7 +102,7 @@
     		
     		<table class="favTableLeftToolbar" id="myDisplay">
     			<tbody>
-    				<th>Toplist Display</th> 				
+    				<th>Collection Toplist to Display</th> 				
     					<tr>
     						<td class="leftToolbarButton" id="vinylToplist">				
     							<button>Vinyl Toplist</button>						
@@ -163,18 +136,139 @@
     	<!-- Everything above this is the LEFT TOOLBAR CONTAINER FOR EVERY PAGE -->
         
         <!-- Below is the unique main body -->
-      
-      <div id="loading">
-      	<h1>Loading Toplist <br> 
-      		Patience, Padawan...</h1>
-      	<img src="http://www.onlinedesignteacher.com/images/loadingbar.gif" alt="loading" />
-      </div>
         
         
         <div id="spaceHolder"></div>
-        	
-         <!-- Above is the unique main body -->
-       
+ <div class="mainBody" id="toplistArtist">
+    	
+    	<div class="pullTab"> 
+    		<p class="showBar"> Show </p> 
+    		<p class="hideBar"> Hide </p> 
+    	</div>
+        
+        <h2 class="topTitle">Top Artists</h2>  
+        
+        <table class="topTable" id="artistTopTable">
+        	<tbody>
+        		<tr>       			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>        	
+        				<p>Led Zeppelin</p>		
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    
+        				<p>Led Zeppelin</p>  				
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>
+        				<p>Led Zeppelin</p>
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    	
+        				<p>Led Zeppelin</p>			
+        			</td>
+        		</tr>
+        		<tr>       			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>        	
+        				<p>Led Zeppelin</p>		
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    
+        				<p>Led Zeppelin</p>  				
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>
+        				<p>Led Zeppelin</p>
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    	
+        				<p>Led Zeppelin</p>			
+        			</td>
+        		</tr>
+        		<tr>       			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>        	
+        				<p>Led Zeppelin</p>		
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    
+        				<p>Led Zeppelin</p>  				
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>
+        				<p>Led Zeppelin</p>
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    	
+        				<p>Led Zeppelin</p>			
+        			</td>
+        		</tr>
+        		<tr>       			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>        	
+        				<p>Led Zeppelin</p>		
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    
+        				<p>Led Zeppelin</p>  				
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>
+        				<p>Led Zeppelin</p>
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    	
+        				<p>Led Zeppelin</p>			
+        			</td>
+        		</tr>
+        	</tbody>
+        </table>
+        </div> 
          <!-- Below is the footer in every page -->
     <footer>
     <nav id="navFoot">
@@ -182,7 +276,7 @@
     		<table>
     			<tbody>
     				
-    					<a href="#topofpage"><img id="TopofPageButton" src="http://bit.ly/11tRGfA" alt="This button goes to the top of this page"/></a>
+    					<a href="#topofpage"><img id="TopofPageButton" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQQ_XgExcAcLplKOlIa7-SL8LR_1z_71y1a4pggjp4oRS2zwT1C" alt="This button goes to the top of this page"/></a>
     					
     				<tr class="LinkRowLeft">
     				
@@ -235,7 +329,7 @@
         					<h6>Page Design by: Andrew Lass<br> Made In Morro Bay California</h6>
     			 	  	    <p>&copy; Black Dog Systems</p>
     			 	  	    <br>
-     				  	 	<a href="www.bdsys.net"><img id="footerLogo" src="http://0.gravatar.com/avatar/4597b5aed4bffe5f78c0e8bca8eff670?s=78&d=http%3A%2F%2F0.gravatar.com%2Favatar%2Fad516503a11cd5ca435acc9bb6523536%3Fs%3D78&r=G" alt="Black Dog Systems Homepage"/></a>
+     				  	 	<a href="www.bdsys.net"><img id="footerLogo" src="http://bdsys.net/ihost/?dm=JP0J" alt="Black Dog Systems Homepage"/></a>
       				  		<br>
       				  		<a href="www.bdsys.net/about">
       				  			<p> About BDS </p></a>
