--- a/toplist/templates/index.html
+++ b/toplist/templates/index.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-    	<link type"text/css" rel="stylesheet" href="collector-main.css"/>
+    	<link type="text/css" rel="stylesheet" href="collector-main.css"/>
     	<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script> <!-- Calls Jquery library from teh netz  You may want to host this server side after dev work:)--> 
     	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script> <!-- This too ^.^ -->
     	<script type="text/javascript" src="collector-main.js"></script>
@@ -22,7 +22,7 @@
         	<br>
         	<a href="/collector" target="_blank"><button>Register an account</button></a>
         	<br>
-        	<p> Click <a href="http://www.bdsys.net/" target="_blank">here</a>
+        	<p> Click <a href="http://www.bdsys.net/" target="_blank" class="italicBoldObject">here</a>
         	   for more information.</p>
         	<br>
         	
@@ -175,7 +175,7 @@
     		<table>
     			<tbody>
     				
-    					<a href="#topofpage"><img id="TopofPageButton" src="http://bit.ly/11tRGfA" alt="This button goes to the top of this page"/></a>
+    					<a href="#topofpage"><img id="TopofPageButton" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQQ_XgExcAcLplKOlIa7-SL8LR_1z_71y1a4pggjp4oRS2zwT1C" alt="This button goes to the top of this page"/></a>
     					
     				<tr class="LinkRowLeft">
     				
