--- a/toplist/collector/about/about.css
+++ b/toplist/collector/about/about.css
@@ -160,8 +160,8 @@ header > h1 {
 	width: 8.5%;
 	height: 100%;
 	float: left;
-	border-right: .2em solid black;
-	border-top: .2em solid black;
+	border: .2em solid black;
+	border-left:none;
 	background-color:#838BB1;
 
 }
@@ -340,7 +340,7 @@ header > h1 {
 	margin: 1em;
 	border: .2em solid black;
 } 
- 
+
 .hoverText {
 	font-weight:700;
 	font-size: 2em;
@@ -349,7 +349,7 @@ header > h1 {
 	margin: -15% auto auto 1%;
 	float: left;
 	z-index: 1;
-}
+} 
  
 .infoPane {
 	height: 30%;
@@ -514,7 +514,7 @@ footer table {
 	display:inline-block;
 	float:right;
 	height: 70%;
-	width: 8.3%;
+	width: 10%;
 	margin: 1% 1.5% 0 0;
 }
 
@@ -529,11 +529,11 @@ footer table {
 }
 
 #TopofPageButton {
-	height:3.2%;
-    width:3.2%;
+	height:5%;
+    width:5%;
     border-radius:100%;  
     border:3.2% solid white;
-    margin: 2% 0 0 1%;
+    margin: 2% 0 0 -7%;
 }
 
 #footerLogo {
