--- a/toplist/collector/vinyl/genre/rock/indie/interpol/antics/ledzep1.css
+++ b/toplist/collector/vinyl/genre/rock/indie/interpol/antics/ledzep1.css
@@ -101,67 +101,34 @@ body > div:nth-child(2) {
 
 /* Above is the left toolbar container */
 
-h1 {
-	font-family:Vivaldi, Verdana, sans-serif;
-	font-weight:900;
-	font-size:5em;
+body > h1 {
 	text-align:center;
-	
 }
 
-table {
+body table {
 	margin:auto;
-	border:1em solid black;
 }
 
-h2 {
-	font-weight:500;
-	font-size:2em;
-	text-align:center;
-	font-family:cursive;
-}
-
-#back {
+body > td a {
 	display:block;
-	height: 2.5em;
-	width: 2.5em;
+	margin:auto;
+	height:30em;
+	width:30em;
+}
+
+body td img {
+	height:30em;
+	width:30em;
+	display:block;
 	margin:auto;
 }
 
-#back img {
-	height:2.5em;
-    width:2.5em;
-    border-radius:100%;  
+body td > ul {
+	margin-left: 5em;
 }
 
-
-th {
-	font-weight:500;
-	font-size:2em;
-	text-align:center;
-	font-family:cursive;
-}
-
-td {
-	
-	border: .2em solid black;
-	padding: 2em;
-}
-
-td a img {
-	height:8em;
-	width:8em;
-	border: .5em solid black;
-	margin-left:3.5em;
-}
-
-p {
-	text-align:center;
-}
-
-li {
-	font-family:Courier;
-	font-weight:800;
+body td ul li {
+	font-family:Tahoma;
 }
 
 /* Below FOOTER is in every page | Above body is unique to this page */
@@ -238,4 +205,3 @@ footer >div:last-child p:last-child {
 	font-family:Vivaldi;
 	text-align: center;
 }
-
