--- a/toplist/templates/genre-type/index-genre-type.html
+++ b/toplist/templates/genre-type/index-genre-type.html
@@ -2,16 +2,15 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-    	<link type="text/css" rel="stylesheet" href="404.css"/>
+    	<link type="text/css" rel="stylesheet" href="genre-type.css"/>
     	<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script> <!-- Calls Jquery library from teh netz  You may want to host this server side after dev work:)--> 
     	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script> <!-- This too ^.^ -->
-    	<script type="text/javascript" src="404.js"></script>
+    	<script type="text/javascript" src="genre-type.js"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Collector Net</title>
     </head>
       <!-- Everything below this in every site -->
-    <body>  	
-    	
+    <body>   	
     	 <!-- Header below is on every page -->
     	 
     <header id="topofpage">
@@ -46,8 +45,8 @@
     		<nav id="navLeftToolbar">
     			
     	<a href="/collector"> <div class="leftToolbarButton" id="myVinylButton">
-    			 My 
-    		<br>Collections 
+    			 My [list here]
+    		<br>Collection 
     	</div> </a>
     		
     		<br>
@@ -138,66 +137,140 @@
         
         <!-- Below is the unique main body -->
         
-        <div class="forOhForDiv">
-        	<h2 id="forOhForDisplay"> 404 <br> Page Not Found </h2>
-        	<p id="centerUnder404Text">No worries, its not that bad ;)</p>
-        	
-        		<br>
-        		
-        		<h3 id="reasonList">List of reasons this page is showing:</h3>
-        		<ol>
-        			<br>
-        	    	<li>*You have typed something in the URL bar that is completely wrong <br> <br>*I.E</li>
-        	    		<ul>
-        	    			<li>- dev.bdsys.net/definitelyNotHere</li>
-        	    			<br>
-        	    			<li>- dev.bdsys.net/collector/NopeNotHereEither</li>
-        	    			<br>
-        	    			<li>- dev.bdsys.net/collector/vinyl/thisDoesntExist</li>
-        	    			<br>
-        	    		</ul>
-        	    	<li>*You clicked something that we linked completely wrong and lead you here</li>
-        	    		<br>
-        	    		<ul>
-        	    			<li>-If that is the case, we appologize and please let us know <a href="dev.bdsys.net/bugs/">here</a></a></li>
-        	    			<br>
-        	    		</ul>
-        	    	<lI>*Something unforeseen and unexplainable</lI>
-        	    		<br>
-        	    		<ul>
-        	    			<li>-Exciting! You should be excited</li>
-        	    		</ul>
-        		</ol>
-        	</div>
-        			
-        	<div class="dictionary">
-        		<h2 id="dictionaryDisplay">Error Four Hundred And Four</h2>
-        		<p class="italicObject">n.</p>
-        		<ol>
-        			<li>
-        				<ul>
-        					<li> <br> a. A thing the internet's residents possess to express that this page you are looking for does not exist</li>
-        					<li> <br> b. A place that informs visitors of a web page that what they seek does not exist </li>
-        				</ul>
-        			</li>
-        		</ol>
-        		<br>
-        		<p class="italicObject">a.</p>
-        		<ol>
-        			<li>
-        				<ul>
-        					<li>a. A description used to describe the absence of something <br> I.E:
-        						<li>"Dude, your car is 404!"</li></li>
-        				</ul>
-        			</li>
-        		</ol>
-        	</div>
-        
         
         <div id="spaceHolder"></div>
         	
          <!-- Above is the unique main body -->
-       
+       <div class="mainBody" id="toplistGenre">
+    	
+    	<div class="pullTab"> 
+    		<p class="showBar"> Show </p> 
+    		<p class="hideBar"> Hide </p> 
+    	</div>
+        
+        <h2 class="topTitle">Top Genres</h2>  
+        
+        <table class="topTable" id="artistTopTable">
+        	<tbody>
+        		<tr>       			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>        	
+        				<p>Led Zeppelin</p>		
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    
+        				<p>Led Zeppelin</p>  				
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>
+        				<p>Led Zeppelin</p>
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    	
+        				<p>Led Zeppelin</p>			
+        			</td>
+        		</tr>
+        		<tr>       			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>        	
+        				<p>Led Zeppelin</p>		
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    
+        				<p>Led Zeppelin</p>  				
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>
+        				<p>Led Zeppelin</p>
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    	
+        				<p>Led Zeppelin</p>			
+        			</td>
+        		</tr>
+        		<tr>       			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>        	
+        				<p>Led Zeppelin</p>		
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    
+        				<p>Led Zeppelin</p>  				
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>
+        				<p>Led Zeppelin</p>
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    	
+        				<p>Led Zeppelin</p>			
+        			</td>
+        		</tr>
+        		<tr>       			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>        	
+        				<p>Led Zeppelin</p>		
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    
+        				<p>Led Zeppelin</p>  				
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>
+        				<p>Led Zeppelin</p>
+        			</td>
+        			
+        			<td>
+        				<a href="/collector/vinyl/genre/rock/ledzep/zep1/">
+        					<img src="/collector/vinyl/genre/rock/ledzep/zep1/ledzep01.jpg" alt="Led Zeppelin 1 album & sleve image"/>
+        				</a>    	
+        				<p>Led Zeppelin</p>			
+        			</td>
+        		</tr>
+        	</tbody>
+        </table>
+        </div> 
          <!-- Below is the footer in every page -->
     <footer>
     <nav id="navFoot">
@@ -205,7 +278,7 @@
     		<table>
     			<tbody>
     				
-    					<a href="#topofpage"><img id="TopofPageButton" src="http://bit.ly/11tRGfA" alt="This button goes to the top of this page"/></a>
+    					<a href="#topofpage"><img id="TopofPageButton" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQQ_XgExcAcLplKOlIa7-SL8LR_1z_71y1a4pggjp4oRS2zwT1C" alt="This button goes to the top of this page"/></a>
     					
     				<tr class="LinkRowLeft">
     				
